--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,43 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/btnBusqueda"
+        android:layout_width="wrap_content"
+        android:layout_height="46dp"
+        android:layout_marginTop="60dp"
+        android:onClick="buscador"
+        android:text="Busqueda de cartas"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="105dp" />
+
+    <Button
+        android:id="@+id/btnContador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="48dp"
+        android:onClick="contador"
+        android:text="Contador de vidas"
+        app:layout_constraintTop_toBottomOf="@+id/btnBusqueda"
+        tools:layout_editor_absoluteX="111dp" />
 
+    <Button
+        android:id="@+id/btnMazos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:onClick="mazos"
+        android:text="Mazos guardados"
+        app:layout_constraintTop_toBottomOf="@+id/btnContador"
+        tools:layout_editor_absoluteX="113dp" />
+
+    <Button
+        android:id="@+id/btnHistorial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:onClick="historial"
+        android:text="Historial de partidas"
+        app:layout_constraintTop_toBottomOf="@+id/btnMazos"
+        tools:layout_editor_absoluteX="99dp" />
 </android.support.constraint.ConstraintLayout>
