--- a/app/src/main/res/layout/activity_historial.xml
+++ b/app/src/main/res/layout/activity_historial.xml
@@ -20,7 +20,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_historial" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/content_historial" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
