--- a/app/src/main/res/layout/activity_resultado.xml
+++ b/app/src/main/res/layout/activity_resultado.xml
@@ -5,21 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Mazos"
-    tools:showIn="@layout/activity_mazos">
+    tools:context=".Resultado">
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/textView19"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Lista de mazos:"
+        android:text="RESULTADOS:"
         android:textSize="24sp" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/listMazos"
+        android:id="@+id/listResultados"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clickable="true"
-        android:scrollbars="vertical"/>
+        android:layout_height="match_parent" />
 </LinearLayout>
