--- a/app/src/main/res/layout/activity_contador.xml
+++ b/app/src/main/res/layout/activity_contador.xml
@@ -10,56 +10,53 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/player1"
+        android:rotation="180"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@android:color/holo_blue_light">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:orientation="horizontal"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="110dp">
 
-            <Button
-                android:id="@+id/btnMenos1"
-                android:layout_width="wrap_content"
-                android:layout_height="65dp"
-                android:layout_marginStart="32dp"
-                android:layout_weight="1"
-                android:background="@drawable/ic_expand_more_black_24dp"
-                android:onClick="decrementar1"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="114dp" />
+        <TextView
+            android:id="@+id/txtPlayer1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="124dp"
+            android:textSize="36sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnMas1"
+            app:layout_constraintHorizontal_bias="0.594"
+            app:layout_constraintStart_toEndOf="@+id/btnMenos1"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.279" />
 
-            <TextView
-                android:id="@+id/txtPlayer1"
-                android:layout_width="172dp"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="12dp"
-                android:layout_marginStart="8dp"
-                android:layout_weight="1"
-                android:text="TextView"
-                android:textSize="36sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/btnMas1"
-                app:layout_constraintHorizontal_bias="0.722"
-                app:layout_constraintStart_toEndOf="@+id/btnMenos1"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+        <Button
+            android:id="@+id/btnMenos1"
+            android:layout_width="wrap_content"
+            android:layout_height="57dp"
+            android:layout_marginLeft="132dp"
+            android:layout_marginStart="132dp"
+            android:background="@drawable/ic_expand_more_black_24dp"
+            android:onClick="decrementar1"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="211dp" />
 
-            <Button
-                android:id="@+id/btnMas1"
-                android:layout_width="wrap_content"
-                android:layout_height="65dp"
-                android:layout_marginEnd="36dp"
-                android:layout_weight="1"
-                android:background="@drawable/ic_expand_less_black_24dp"
-                android:onClick="incrementar1"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteY="114dp" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/btnMas1"
+            android:layout_width="wrap_content"
+            android:layout_height="57dp"
+            android:layout_marginEnd="152dp"
+            android:layout_marginRight="152dp"
+            android:layout_marginTop="208dp"
+            android:background="@drawable/ic_expand_less_black_24dp"
+            android:onClick="incrementar1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -80,33 +77,32 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="124dp"
-            android:text="TextView"
             android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnMas2"
-            app:layout_constraintHorizontal_bias="0.571"
+            app:layout_constraintHorizontal_bias="0.769"
             app:layout_constraintStart_toEndOf="@+id/btnMenos2"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.215" />
 
         <Button
             android:id="@+id/btnMenos2"
             android:layout_width="wrap_content"
             android:layout_height="57dp"
-            android:layout_marginLeft="48dp"
-            android:layout_marginStart="48dp"
+            android:layout_marginLeft="132dp"
+            android:layout_marginStart="132dp"
             android:background="@drawable/ic_expand_more_black_24dp"
             android:onClick="decrementar2"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="124dp" />
+            tools:layout_editor_absoluteY="172dp" />
 
         <Button
             android:id="@+id/btnMas2"
             android:layout_width="wrap_content"
             android:layout_height="57dp"
-            android:layout_marginEnd="44dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginTop="124dp"
+            android:layout_marginEnd="140dp"
+            android:layout_marginRight="140dp"
+            android:layout_marginTop="172dp"
             android:background="@drawable/ic_expand_less_black_24dp"
             android:onClick="incrementar2"
             app:layout_constraintEnd_toEndOf="parent"
